'align-items: center and display: flex crreates the item to be at the center vertically, background-repeat: norepeat prevents repeating of the displayed block, we used <a href="#"> because we dnt have a link to an image'

--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -4,6 +4,7 @@ header{
     width: 100%;
     border-bottom: 1px solid #CCCCCC;
     display: flex;
+    align-items: center;
 }
 header a{
     background-image: url("../images/logo.png");
